# data-visualisation-python-companion

./: AGENTS.md  README.md  RECOVERED_CONTEXT.md  pyproject.toml
notebooks/week-01/: behind-the-tableau-curtain.ipynb  behind-the-tableau-curtain.md
notebooks/week-02/: filtering-sorting-and-grouping.ipynb  filtering-sorting-and-grouping.md
notebooks/week-03/: dashboard-storytelling.ipynb  dashboard-storytelling.md
notebooks/week-04/: forecasting-with-python.ipynb  forecasting-with-python.md
notebooks/week-05/: accessible-and-responsible-visualisation.ipynb  accessible-and-responsible-visualisation.md
notebooks/week-06/: ai-assisted-data-analysis.ipynb  ai-assisted-data-analysis.md
notebooks/week-07/: interactive-visualisations-with-plotly.ipynb  interactive-visualisations-with-plotly.md
notebooks/week-08/: explaining-ai-and-ethical-analytics.ipynb  explaining-ai-and-ethical-analytics.md
notebooks/week-09/: dashboard-prototyping-with-streamlit.ipynb  dashboard-prototyping-with-streamlit.md
